--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
   <title>Glowing Dots</title>
 </head>
 <body>
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
+  <div>
+    <h2>Some Pointless Header</h2>
+    <h4>About Page</h4>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      </ul>
+  </div>
 </body>
 </html>
